Fix: remove google secrets

--- a/client/templates/client/accounts/signup.html
+++ b/client/templates/client/accounts/signup.html
@@ -83,7 +83,7 @@
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyCy7x2Sx_u2gBDfSBfksctKjknIHpAqy24"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key="></script>
 
 <script>
     $(document).ready(function(){
