--- a/client/templates/client/base.html
+++ b/client/templates/client/base.html
@@ -63,7 +63,7 @@
       href="{% static 'css/old_version/responsive.css' %}"
     />
 
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyCy7x2Sx_u2gBDfSBfksctKjknIHpAqy24"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places&key="></script>
     <title>{% block title %}{% endblock title %} | FITSTAR Pro</title>
 
     {% block css %} {% comment %} CSS HERE {% endcomment %} {% endblock css %}
